# parallelImageStitcher

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
data/carmel/: H01to00.txt  H02to00.txt  H02to01.txt  H03to01.txt  H03to02.txt  H04to02.txt  H04to03.txt  H05to03.txt  H05to04.txt  H06to04.txt  H06to05.txt  H07to04.txt  H07to05.txt  H07to06.txt  H08to05.txt  H08to06.txt  H08to07.txt  H09to05.txt  H09to06.txt  H09to07.txt  H09to08.txt  H10to06.txt  H10to07.txt  H10to08.txt  H10to09.txt  H11to07.txt  H11to08.txt  H11to09.txt  H11to10.txt  H12to09.txt  H12to10.txt  H12to11.txt  H13to10.txt  H13to11.txt  H13to12.txt  H14to11.txt  H14to12.txt  H14to13.txt  H15to12.txt  H15to13.txt  (+44 more)
data/diamondhead/: H01to00.txt  H02to00.txt  H02to01.txt  H03to00.txt  H03to01.txt  H03to02.txt  H04to03.txt  H05to01.txt  H05to02.txt  H05to03.txt  H06to01.txt  H06to02.txt  H06to05.txt  H07to01.txt  H07to02.txt  H07to05.txt  H07to06.txt  H08to01.txt  H08to02.txt  H08to05.txt  H08to06.txt  H08to07.txt  H09to02.txt  H09to06.txt  H09to07.txt  H09to08.txt  H10to07.txt  H10to08.txt  H10to09.txt  H11to09.txt  H11to10.txt  H12to10.txt  H12to11.txt  H13to02.txt  H13to06.txt  H13to07.txt  H13to08.txt  H13to09.txt  H13to10.txt  H13to11.txt  (+42 more)
data/fishbowl/: H01to00.txt  H02to00.txt  H02to01.txt  H03to00.txt  H03to01.txt  H03to02.txt  H04to01.txt  H04to02.txt  H04to03.txt  H05to02.txt  H05to03.txt  H05to04.txt  H06to03.txt  H06to04.txt  H06to05.txt  H07to04.txt  H07to05.txt  H07to06.txt  H08to05.txt  H08to06.txt  H08to07.txt  H09to07.txt  H09to08.txt  H10to07.txt  H10to08.txt  H10to09.txt  H10to7.txt  H10to8.txt  H10to9.txt  H11to08.txt  H11to09.txt  H11to10.txt  H12to09.txt  H12to10.txt  H12to11.txt  features-00.txt  features-01.txt  features-02.txt  features-03.txt  features-04.txt  (+21 more)
data/goldengate/: H01to00.txt  H02to00.txt  H02to01.txt  H03to01.txt  H03to02.txt  H04to02.txt  H04to03.txt  H05to03.txt  H05to04.txt  features-00.txt  features-01.txt  features-02.txt  features-03.txt  features-04.txt  features-05.txt  goldengate-00.raw  goldengate-01.raw  goldengate-02.raw  goldengate-03.raw  goldengate-04.raw  goldengate-05.raw
data/halfdome/: H01to00.txt  H02to00.txt  H02to01.txt  H03to00.txt  H03to01.txt  H03to02.txt  H04to01.txt  H04to02.txt  H04to03.txt  H05to03.txt  H05to04.txt  H06to04.txt  H06to05.txt  H07to05.txt  H07to06.txt  H08to06.txt  H08to07.txt  H09to02.txt  H09to03.txt  H09to04.txt  H09to05.txt  H09to06.txt  H09to07.txt  H10to01.txt  H10to02.txt  H10to03.txt  H10to04.txt  H10to05.txt  H10to06.txt  H10to09.txt  H11to00.txt  H11to01.txt  H11to02.txt  H11to03.txt  H11to04.txt  H11to05.txt  H11to09.txt  H11to10.txt  H12to00.txt  H12to01.txt  (+40 more)
data/hotel/: H01to00.txt  H02to01.txt  H03to02.txt  H04to03.txt  H05to04.txt  H06to04.txt  H06to05.txt  H07to05.txt  H07to06.txt  features-00.txt  features-01.txt  features-02.txt  features-03.txt  features-04.txt  features-05.txt  features-06.txt  features-07.txt  hotel-00.raw  hotel-01.raw  hotel-02.raw  hotel-03.raw  hotel-04.raw  hotel-05.raw  hotel-06.raw  hotel-07.raw
data/office/: H01to00.txt  H02to00.txt  H02to01.txt  H03to00.txt  H03to01.txt  H03to02.txt  Thumbs.db  features-00.txt  features-01.txt  features-02.txt  features-03.txt  office-00.raw  office-01.raw  office-02.raw  office-03.raw
data/rio/: H01to00.txt  H02to00.txt  H02to01.txt  H03to00.txt  H03to01.txt  H03to02.txt  H04to01.txt  H04to02.txt  H04to03.txt  H05to01.txt  H05to02.txt  H05to03.txt  H05to04.txt  H06to03.txt  H06to04.txt  H06to05.txt  H07to04.txt  H07to05.txt  H07to06.txt  H08to04.txt  H08to05.txt  H08to06.txt  H08to07.txt  H09to05.txt  H09to06.txt  H09to07.txt  H09to08.txt  H10to06.txt  H10to07.txt  H10to08.txt  H10to09.txt  H11to07.txt  H11to08.txt  H11to09.txt  H11to10.txt  H12to07.txt  H12to08.txt  H12to09.txt  H12to10.txt  H12to11.txt  (+498 more)
data/shanghai/: H01to00.txt  H02to00.txt  H02to01.txt  H03to00.txt  H03to01.txt  H03to02.txt  H04to00.txt  H04to01.txt  H04to02.txt  H04to03.txt  H05to02.txt  H05to03.txt  H05to04.txt  H06to03.txt  H06to04.txt  H06to05.txt  H07to04.txt  H07to05.txt  H07to06.txt  H08to05.txt  H08to06.txt  H08to07.txt  H09to06.txt  H09to07.txt  H09to08.txt  H10to07.txt  H10to08.txt  H10to09.txt  H11to06.txt  H11to07.txt  H11to08.txt  H11to09.txt  H11to10.txt  H12to07.txt  H12to08.txt  H12to09.txt  H12to10.txt  H12to11.txt  H13to08.txt  H13to09.txt  (+251 more)
data/yard/: H01to00.txt  H02to00.txt  H02to01.txt  H03to01.txt  H03to02.txt  H04to02.txt  H04to03.txt  H05to02.txt  H05to03.txt  H05to04.txt  H06to03.txt  H06to04.txt  H06to05.txt  H07to04.txt  H07to05.txt  H07to06.txt  H08to05.txt  H08to06.txt  H08to07.txt  features-00.txt  features-01.txt  features-02.txt  features-03.txt  features-04.txt  features-05.txt  features-06.txt  features-07.txt  features-08.txt  yard-00.raw  yard-01.raw  yard-02.raw  yard-03.raw  yard-04.raw  yard-05.raw  yard-06.raw  (+2 more)
examples/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
examples/examples/: Makefile  cmake_install.cmake
examples/examples/image_stitching_seq/: Makefile
examples/image_stitching_cuda/: 2image_stitching.cpp  CMakeLists.txt  image_stitching.cpp  image_stitching.cu
examples/image_stitching_openmp/: CMakeLists.txt
examples/image_stitching_pure_openmp/: CMakeLists.txt  image_stitching.cpp
examples/image_stitching_seq/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  image_stitching.cpp
examples/image_stitching_seq/feature_extract/: Makefile
examples/image_stitching_seq/image_match/: Makefile
examples/image_stitching_seq/image_stitching_seq/: Makefile
include/: ezsift.h  image.h
src/: common.h  ezsift.cpp  ezsift.cu  image_utility.cpp
(+290 files in other folders)
